# mysandbox

./: README.md
cpp/basics/exercise_1/: Makefile  Makefile.am  Makefile.in  configure.ac  main.cpp
cpp/basics/exercise_2/: Makefile  main.cpp
cpp/basics/exercise_3/: Makefile  main.cpp
cpp/basics/exercise_4/: Makefile  main.cpp
cpp/basics/exercise_5/: main.cpp
cpp/basics/exercise_6/: Makefile  main.cpp
cpp/stroustrup/ch3/: Makefile.am  configure.ac  exe10.cpp  exe4.cpp  exe6.cpp  exe8.cpp  exe9.cpp
cpp/stroustrup/ch4/: Makefile.am  Makefile.in  configure.ac  exe3.cpp
erlang/NIFs/egmp/erl/: egmp.erl
erlang/NIFs/egmp/src/: Makefile.in  configure.ac  egmp.c
