AC_INIT([esox], [1.0], [mohamed.zabiulla@gmail.com])                                                                                                  
AM_INIT_AUTOMAKE([-Wall -Werror foreign])                                       
AC_CONFIG_MACRO_DIR([m4])                                                       
AC_PROG_CC                                                                      
AC_PROG_CXX                                                                     
AM_PROG_AR                                                                      
AC_CONFIG_HEADERS([config.h])                                                   
AC_CONFIG_FILES([Makefile])                                                     
AC_PROG_LIBTOOL                                                                 
AC_OUTPUT
